--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -46,7 +46,7 @@ Oct 21
 </ul>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/bitcoin/</strong></div>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/bitcoin//index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
