--- a/fr/lectures/index.html
+++ b/fr/lectures/index.html
@@ -225,7 +225,7 @@
 </p>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/lectures/</strong></div>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/lectures//index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
