--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Find me on:</p>
 </div>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/</strong></div>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris//index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
