--- a/fr/bitcoin/index.html
+++ b/fr/bitcoin/index.html
@@ -35,7 +35,7 @@
 </div>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/bitcoin/</strong></div>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/bitcoin//index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
