--- a/talks/index.html
+++ b/talks/index.html
@@ -29,7 +29,7 @@
 </div>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/talks/</strong></div>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/talks//index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
