deploy: c1883eb3d71e3eb28f6c53483ccee511be8045dc

--- a/readings/index.html
+++ b/readings/index.html
@@ -236,7 +236,7 @@ cherry pick information from them.</p>
 </p>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/readings//index.txt</strong></div>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/readings/index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
