--- a/cv/index.html
+++ b/cv/index.html
@@ -59,7 +59,7 @@ mathematics and physics.</p>
 </div>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/cv//index.txt</strong></div>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/cv/index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
