--- a/fr/topics/index.html
+++ b/fr/topics/index.html
@@ -27,7 +27,7 @@ Jan 01
 </ul>
 </section>
 <footer id=footer>
-<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/topics//index.txt</strong></div>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/topics/index.txt</strong></div>
 <p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
 </footer>
 </body>
