deploy: 3d031ffd058796641520523ab3e48daf160b9cb6

--- a/cv/index.html
+++ b/cv/index.html
@@ -26,33 +26,33 @@
 </code></pre><p><a href=https://github.com/edouardparis>GitHub</a>
 / <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p>
 <h1 id=-experience----->[ Experience ] &mdash;</h1>
-<p><strong>Software engineer, Ulule</strong> \<br>
+<p><strong>Software engineer, Ulule</strong> \
 <em>Sept 2017 - Today, Paris</em></p>
 <p>Development of the crowd-funding platforms Ulule and Okpal. Design and
 implementation of several services in Go using gRPC, RabbitMQ and a
 search engine with ElasticSearch.</p>
-<p><strong>Intern in software engineering, Ulule</strong> \<br>
+<p><strong>Intern in software engineering, Ulule</strong> \
 <em>Feb 2017 - Aug 2018, Paris</em></p>
 <p>Development of the REST API of Ulule with the language Go and the
 PostgreSQL database.</p>
-<p><strong>Intern in web development, Hellojam</strong> \<br>
+<p><strong>Intern in web development, Hellojam</strong> \
 <em>Jul 2015 - Jan 2016, Paris</em></p>
 <p>Development of a web interface for the employees. Technologies used were
 HTML, CSS, and the Javascript library AngularJS.</p>
-<p><strong>Internship in software programming, Hiram Finance</strong> \<br>
+<p><strong>Internship in software programming, Hiram Finance</strong> \
 <em>Jul 2014 - Aug 2014, Paris</em></p>
 <p>Development of software tools for derivatives finance in C++. Libraries
 used: QuantLib and TinyXml.</p>
 <h1 id=-education----->[ Education ] &mdash;</h1>
-<p><strong>French Engineer Diploma in CS and applied mathematics, ENSIIE</strong> \<br>
+<p><strong>French Engineer Diploma in CS and applied mathematics, ENSIIE</strong> \
 <em>2017, Évry FR</em></p>
 <p><em>École Nationale Supérieure d’Informatique pour l’Industrie et
 l’Entreprise</em>, National Graduate Engineering School. Coursework about
 algorithm analysis, calculus, formal proof, cybersecurity and software
 programming.</p>
-<p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong> \<br>
+<p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong> \
 <em>2015, Vilnius LT</em></p>
-<p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong> \<br>
+<p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong> \
 <em>2011-2013, Paris</em></p>
 <p>Preparatory classes: two-year undergraduate intensive course in
 mathematics and physics.</p>
