--- a/fr/lectures/index.html
+++ b/fr/lectures/index.html
@@ -18,6 +18,9 @@
 <hr>
 <h2>2021</h2>
 <p>
+<em>La ville de vapeur</em>
+- Carlos Ruiz Zafón
+</br>
 <em>Le Messie de Dune</em>
 - Frank Herbert
 </br>
