--- a/readings/index.html
+++ b/readings/index.html
@@ -29,6 +29,9 @@ cherry pick information from them.</p>
 <hr>
 <h2>2021</h2>
 <p>
+<em>La ville de vapeur</em>
+- Carlos Ruiz Zafón
+</br>
 <em>Le Messie de Dune</em>
 - Frank Herbert
 </br>
