--- a/fr/lectures/index.html
+++ b/fr/lectures/index.html
@@ -18,6 +18,9 @@
 <hr>
 <h2>2021</h2>
 <p>
+<em>Le triomphe et la chute des dinosaures</em>
+- Steve Brusatte
+</br>
 <em>La ville de vapeur</em>
 - Carlos Ruiz Zafón
 </br>
