--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -1,1 +1,238 @@
-<!doctype html><html><head><title>https://edouard.paris/fr/readings/</title><link rel=canonical href=https://edouard.paris/fr/readings/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://edouard.paris/fr/readings/"></head></html>
+<!doctype html><html>
+<head>
+<title>edouard.paris</title>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
+<meta name=description content="Site web personnel de Edouard Paris">
+<link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
+<link rel=stylesheet href=/css/main.css>
+</head>
+<body>
+<section>
+<div class=article-header>
+<a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/lecture>/lecture</a>
+</div>
+<div class=article-body>
+<pre tabindex=0><code class=language-ascii data-lang=ascii></code></pre>
+</div>
+<hr>
+<h2>2021</h2>
+<p>
+<em>Le triomphe et la chute des dinosaures</em>
+- Steve Brusatte
+</br>
+<em>La ville de vapeur</em>
+- Carlos Ruiz Zafón
+</br>
+<em>Le Messie de Dune</em>
+- Frank Herbert
+</br>
+<em>Comment tout peut s'effrondrer</em>
+- Pablo Servigne, Raphaël Stevens
+</br>
+<em>Or noir, la grande histoire du pétrole</em>
+- Matthieu Auzanneau
+</br>
+<em>Tours et détours de la vilaine fille</em>
+- Mario Vargas Llosa
+</br>
+<em>L'anomalie</em>
+- Hervé Le Tellier
+</br>
+<em>Le Choix de Simon</em>
+- John Ramster
+</br>
+<em>Outresable</em>
+- Hugh Howey
+</br>
+<em>Rouge Brésil</em>
+- Jean-Christophe Rufin
+</br>
+</p>
+<h2>2020</h2>
+<p>
+<em>La Mort du roi Tsongor</em>
+- Laurent Gaudé
+</br>
+<em>Dune</em>
+- Frank Herbert
+</br>
+<em>Aux Cinq Rues, Lima</em>
+- Mario Vargas Llosa
+</br>
+<em>Le Soleil des Scorta</em>
+- Laurent Gaudé
+</br>
+<em>Là où dansent les morts</em>
+- Tony Hillerman
+</br>
+<em>Le K</em>
+- Dino Buzzati
+</br>
+<em>Le jeu de l'ange</em>
+- Carlos Ruiz Zafón
+</br>
+<em>L´Éternel Mari</em>
+- Fiodor Dostoïevski
+</br>
+<em>La Dame de Pique & autres récits</em>
+- Alexandre Pouchkine
+</br>
+<em>Gomorra</em>
+- Roberto Saviano
+</br>
+<em>L'Identité</em>
+- Milan Kundera
+</br>
+<em>Le chapiteau vert</em>
+- Ludmila Oulitskaïa
+</br>
+<em>Dans la forêt</em>
+- Jean Hegland
+</br>
+<em>Pour en finir avec Eddy Bellegueule</em>
+- Édouard Louis
+</br>
+<em>Carrie</em>
+- Stephen King
+</br>
+<em>Le Zahir</em>
+- Paulo Coelho
+</br>
+<em>Les Particules élémentaires</em>
+- Michel Houellebecq
+</br>
+</p>
+<h2>2019</h2>
+<p>
+<em>Le Meurtre du Commandeur - La Métaphore se déplace</em>
+- Haruki Murakami
+</br>
+<em>Le Meurtre du Commandeur - Une Idée apparait</em>
+- Haruki Murakami
+</br>
+<em>Jouer sa peau</em>
+- Nassim Nicholas Taleb
+</br>
+<em>Mémoires vives</em>
+- Edward Snowden
+</br>
+<em>Moi, Tituba sorcière</em>
+- Maryse Condé
+</br>
+<em>Ma vie sur la route</em>
+- Gloria Steinem
+</br>
+<em>Le Mur invisible</em>
+- Marlen Haushofer
+</br>
+<em>Autour de ton cou</em>
+- Chimamanda Ngozi Adichie
+</br>
+<em>Toute la lumière que nous ne pouvons voir</em>
+- Anthony Doerr
+</br>
+<em>Beauté fatale</em>
+- Mona Chollet
+</br>
+<em>Ce qu'il reste de nos rêves</em>
+- Flore Vasseur
+</br>
+<em>Au pays des choses dernières (Le voyage d'Anna Blume)</em>
+- Paul Auster
+</br>
+<em>La condition humaine</em>
+- André Malraux
+</br>
+<em>L'Ombre du vent</em>
+- Carlos Ruiz Zafón
+</br>
+</p>
+<h2>2018</h2>
+<p>
+<em>Sorcières</em>
+- Mona Chollet
+</br>
+<em>La Vie Heureuse et Les Bienfaits</em>
+- Sénèque
+</br>
+<em>Le Prince et autres textes</em>
+- Nicolas Machiavel
+</br>
+<em>Antifragile : les bienfaits du désordre</em>
+- Nassim Nicholas Taleb
+</br>
+<em>Le Cygne Noir</em>
+- Nassim Nicholas Taleb
+</br>
+<em>Chanson douce</em>
+- Leïla Slimani
+</br>
+<em>Tous les hommes désirent naturellement savoir</em>
+- Nina Bouraoui
+</br>
+<em>La Pianiste</em>
+- Elfriede Jelinek
+</br>
+<em>Cercueils sur mesure</em>
+- Truman Capote
+</br>
+<em>Tendre est la nuit</em>
+- Francis Scott Fitzgerald
+</br>
+<em>Jérusalem</em>
+- Alan Moore
+</br>
+<em>La route de la servitude</em>
+- Friedrich A. Hayek
+</br>
+<em>Les gens</em>
+- Philippe Labro
+</br>
+</p>
+<h2>2017</h2>
+<p>
+<em>Freakonomics</em>
+- Steven D. Levitt & Stephen J.Dubner
+</br>
+<em>Pensées pour moi-même</em>
+- Marc Aurèle
+</br>
+<em>L'amant</em>
+- Marguerite Duras
+</br>
+<em>Personne ne gagne</em>
+- Jack Black
+</br>
+<em>La symphonie des nombres premiers</em>
+- Markus du Sautoy
+</br>
+<em>Vernon Subutex</em>
+- Virginie Despentes
+</br>
+<em>Lolita</em>
+- Vladimir Nabokov
+</br>
+<em>Le Chœur des femmes</em>
+- Martin Winckler
+</br>
+<em>Ne tirez pas sur l'oiseau moqueur</em>
+- Harper Lee
+</br>
+<em>Bonjour tristesse</em>
+- Françoise Sagan
+</br>
+<em>Charlotte</em>
+- David Foenkinos
+</br>
+<em>L'hibiscus pourpre</em>
+- Chimamanda Ngozi Adichie
+</br>
+</p>
+</section>
+<footer id=footer>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/lecture/index.txt</strong></div>
+<p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
+</footer>
+</body>
+</html>
