--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -18,6 +18,9 @@
 <hr>
 <h2>2021</h2>
 <p>
+<em>Le cauchemar d'Innsmouth & autres nouvelles</em>
+- Howard P. Lovecraft
+</br>
 <em>Le triomphe et la chute des dinosaures</em>
 - Steve Brusatte
 </br>
