--- a/readings/index.html
+++ b/readings/index.html
@@ -29,6 +29,9 @@ cherry pick information from them.</p>
 <hr>
 <h2>2021</h2>
 <p>
+<em>Le cauchemar d'Innsmouth & autres nouvelles</em>
+- Howard P. Lovecraft
+</br>
 <em>Le triomphe et la chute des dinosaures</em>
 - Steve Brusatte
 </br>
