--- a/readings/index.html
+++ b/readings/index.html
@@ -27,6 +27,12 @@ cherry pick information from them.</p>
 <p>If the title is translated in French: I read the French translation.</p>
 </div>
 <hr>
+<h2>2022</h2>
+<p>
+<em>Neuromancien</em>
+- William Gibson
+</br>
+</p>
 <h2>2021</h2>
 <p>
 <em>Le cauchemar d'Innsmouth & autres nouvelles</em>
