--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -16,6 +16,12 @@
 <pre tabindex=0><code class=language-ascii data-lang=ascii></code></pre>
 </div>
 <hr>
+<h2>2022</h2>
+<p>
+<em>Neuromancien</em>
+- William Gibson
+</br>
+</p>
 <h2>2021</h2>
 <p>
 <em>Le cauchemar d'Innsmouth & autres nouvelles</em>
