deploy: 89279147073d70d377de1f3677cc367e0599bc6c

--- a/readings/index.html
+++ b/readings/index.html
@@ -29,6 +29,9 @@ cherry pick information from them.</p>
 <hr>
 <h2>2022</h2>
 <p>
+<em>Au commencement était…</em>
+- David Graeber & David Wengrow
+</br>
 <em>Neuromancien</em>
 - William Gibson
 </br>
