--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -18,6 +18,9 @@
 <hr>
 <h2>2022</h2>
 <p>
+<em>Au commencement était…</em>
+- David Graeber & David Wengrow
+</br>
 <em>Neuromancien</em>
 - William Gibson
 </br>
