deploy: 535d546dc163b208226fcf5ea0663e11fb01caad

--- a/fr/index.html
+++ b/fr/index.html
@@ -1,19 +1,16 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.92.2">
-<title>edouard.paris</title>
-<meta charset=utf-8>
+<meta name=generator content="Hugo 0.93.0">
+<title>edouard.paris</title><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name=description content="Site web personnel de Edouard Paris">
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=stylesheet href=/css/main.css>
-</head>
-<body>
+</head><body>
 <section>
 <div class=article-header>
 <a href=https://edouard.paris/fr>~/edouard.paris/fr</a>
-</div>
-<div class=article-body>
+</div><div class=article-body>
 <pre tabindex=0><code class=language-ascii data-lang=ascii>    ___       ___       ___       ___       ___       ___       ___
    /\  \     /\  \     /\__\     /\  \     /\  \     /\__\     /\  \
   /::\  \   /::\  \   /:| _|_   _\:\  \   /::\  \   /:/ _/_   /::\  \
@@ -21,17 +18,8 @@
  \:\::/  / \:\/:/  / \/|::/  / \::/\/__/ \:\/:/  / \:\/:/  / \;:::/  /
   \::/  /   \::/  /    |:/  /   \/__/     \::/  /   \::/  /   |:\/__/
    \/__/     \/__/     \/__/               \/__/     \/__/     \|__| ,
-</code></pre><p>Je m&rsquo;appelle Édouard Paris.</p>
-<p>Je suis ingénieur en informatique et mathématiques appliquées,
-vous pouvez me retrouver sur :</p>
-<p><a href=https://twitter.com/edouardparis>Twitter</a>
+</code></pre><p>Je m&rsquo;appelle Édouard Paris.</p><p>Je suis ingénieur en informatique et mathématiques appliquées,
+vous pouvez me retrouver sur :</p><p><a href=https://twitter.com/edouardparis>Twitter</a>
 / <a href=https://github.com/edouardparis>GitHub</a>
-/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p>
-</div>
-</section>
-<footer id=footer>
-<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/index.txt</strong></div>
-<p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
-</footer>
-</body>
-</html>
+/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><footer id=footer>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
