--- a/slides/index.html
+++ b/slides/index.html
@@ -1,23 +1,14 @@
 <!doctype html><html>
 <head>
-<title>edouard.paris</title>
-<meta charset=utf-8>
+<title>edouard.paris</title><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name=description content="Edouard Paris personal website">
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=stylesheet href=/css/main.css>
-</head>
-<body>
+</head><body>
 <section>
 <div class=article-header>
 <a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/slides>/slides</a>
-</div>
-<div class=article-body>
-</div>
-</section>
-<footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/slides/index.txt</strong></div>
-<p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
-</footer>
-</body>
-</html>
+</div><div class=article-body>
+</div></section><footer id=footer>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/slides/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
