--- a/talks/index.html
+++ b/talks/index.html
@@ -1,36 +1,20 @@
 <!doctype html><html>
 <head>
-<title>edouard.paris</title>
-<meta charset=utf-8>
+<title>edouard.paris</title><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name=description content="Edouard Paris personal website">
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=stylesheet href=/css/main.css>
-</head>
-<body>
+</head><body>
 <section>
 <div class=article-header>
 <a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/talks>/talks</a>
-</div>
-<div class=article-body>
-<h1 id=-2019----->[ 2019 ] &mdash;</h1>
-<h2 id=a-simple-faucet-using-lnurl-en>A simple faucet using LNURL (EN)</h2>
-<p>2019-11-10 for chainhack4
+</div><div class=article-body>
+<h1 id=-2019----->[ 2019 ] &mdash;</h1><h2 id=a-simple-faucet-using-lnurl-en>A simple faucet using LNURL (EN)</h2><p>2019-11-10 for chainhack4
 <a href=/slides/2019-11-10-chainhack4>slides</a> /
-<a href=https://blockchain-hackathon.com/>link</a></p>
-<h2 id=connect-yourself-to-the-lightning-network-with-go-fr>Connect yourself to the Lightning Network with Go (FR)</h2>
-<p>2019-06-18, for the meetup Go Paris -
+<a href=https://blockchain-hackathon.com/>link</a></p><h2 id=connect-yourself-to-the-lightning-network-with-go-fr>Connect yourself to the Lightning Network with Go (FR)</h2><p>2019-06-18, for the meetup Go Paris -
 <a href=/slides/2019-06-18-meetup-go-paris>slides</a> /
-<a href=https://www.meetup.com/fr-FR/Golang-Paris/events/262210434/>link</a></p>
-<h2 id=loukoum-an-sql-builder-for-go-fr>Loukoum, an SQL Builder for Go (FR)</h2>
-<p>2019-02-21, for the meetup Postgres Paris -
+<a href=https://www.meetup.com/fr-FR/Golang-Paris/events/262210434/>link</a></p><h2 id=loukoum-an-sql-builder-for-go-fr>Loukoum, an SQL Builder for Go (FR)</h2><p>2019-02-21, for the meetup Postgres Paris -
 <a href=https://github.com/novln/loukoum-pgmeetup>slides</a> /
-<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p>
-</div>
-</section>
-<footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/talks/index.txt</strong></div>
-<p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
-</footer>
-</body>
-</html>
+<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p></div></section><footer id=footer>
+<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/talks/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
