--- a/fr/topics/index.html
+++ b/fr/topics/index.html
@@ -1,21 +1,24 @@
 <!doctype html><html>
 <head>
-<title>edouard.paris</title>
-<meta charset=utf-8>
+<title>edouard.paris</title><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name=description content="Site web personnel de Edouard Paris">
 <link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
 <link rel=stylesheet href=/css/main.css>
-</head>
-<body>
+</head><body>
 <section>
 <div class=article-header>
 <a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/topics>/topics</a>
-</div>
-<div class=article-body>
-</div>
-<h1>0001 --</h1>
-<ul>
+</div><div class=article-body>
+</div><h1>2022 --</h1><ul>
+<li>
+<span>
+<time>
+Mar 01
+</time>
+</span>|
+<a href=https://edouard.paris/fr/lecture/>lecture</a>
+</li></ul><h1>0001 --</h1><ul>
 <li>
 <span>
 <time>
@@ -23,12 +26,5 @@ Jan 01
 </time>
 </span>|
 <a href=https://edouard.paris/fr/bitcoin/>bitcoin</a>
-</li>
-</ul>
-</section>
-<footer id=footer>
-<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/topics/index.txt</strong></div>
-<p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p>
-</footer>
-</body>
-</html>
+</li></ul></section><footer id=footer>
+<div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/topics/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
