--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,16 +1,4 @@
-<!doctype html><html>
-<head>
-<title>edouard.paris</title><meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
-<meta name=description content="Edouard Paris personal website">
-<link rel="shortcut icon" href=/favicon.ico type=image/x-icon>
-<link rel=stylesheet href=/css/main.css>
-</head><body>
-<section>
-<div class=article-header>
-<a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/bitcoin>/bitcoin</a>
-</div><div class=article-body>
-<pre tabindex=0><code>00000000   01 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet href=/css/main.css></head><body><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/bitcoin>/bitcoin</a></div><div class=article-body><pre tabindex=0><code>00000000   01 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000010   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000020   00 00 00 00 3B A3 ED FD  7A 7B 12 B2 7A C7 2C 3E   ....;£íýz{.²zÇ,&gt;
 00000030   67 76 8F 61 7F C8 1B C3  88 8A 51 32 3A 9F B8 AA   gv.a.È.ÃˆŠQ2:Ÿ¸ª
@@ -28,13 +16,6 @@
 000000F0   79 62 E0 EA 1F 61 DE B6  49 F6 BC 3F 4C EF 38 C4   ybàê.aÞ¶Iö¼?Lï8Ä
 00000100   F3 55 04 E5 1E C1 12 DE  5C 38 4D F7 BA 0B 8D 57   óU.å.Á.Þ\8M÷º..W
 00000110   8A 4C 70 2B 6B F1 1D 5F  AC 00 00 00 00            ŠLp+kñ._¬....
-</code></pre></div><h1>2019 --</h1><ul>
-<li>
-<span>
-<time>
-Oct 21
-</time>
+</code></pre></div><h1>2019 --</h1><ul><li><span><time>Oct 21</time>
 </span>|
-<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a>
-</li></ul></section><footer id=footer>
-<div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/bitcoin/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
+<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><footer id=footer><div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/bitcoin/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
