--- a/readings/index.html
+++ b/readings/index.html
@@ -7,7 +7,8 @@
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>Au commencement était…</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>Le monde caché</em>
+- Merlin Sheldrake</br><em>Au commencement était…</em>
 - David Graeber & David Wengrow</br><em>Neuromancien</em>
 - William Gibson</br></p><h2>2021</h2><p><em>Le cauchemar d'Innsmouth & autres nouvelles</em>
 - Howard P. Lovecraft</br><em>Le triomphe et la chute des dinosaures</em>
