deploy: 6bf7eef18c597837f2d54c109c012f1d58b3ffbf

--- a/readings/index.html
+++ b/readings/index.html
@@ -7,7 +7,8 @@
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>La Forêt sombre</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>La Mort immortelle</em>
+- Liu Cixin</br><em>La Forêt sombre</em>
 - Liu Cixin</br><em>Le Problème à trois corps</em>
 - Liu Cixin</br><em>Les Enfants de Dune</em>
 - Frank Herbert</br><em>Le monde caché</em>
