--- a/readings/index.html
+++ b/readings/index.html
@@ -7,7 +7,8 @@
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>L'Empereur-Dieu de Dune</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2022</h2><p><em>Boule de foudre</em>
+- Liu Cixin</br><em>L'Empereur-Dieu de Dune</em>
 - Frank Herbert</br><em>La Mort immortelle</em>
 - Liu Cixin</br><em>La Forêt sombre</em>
 - Liu Cixin</br><em>Le Problème à trois corps</em>
