deploy: 9179c219f15a9bfc5821e418fc920d63b3529226

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/cv>/cv</a></div><div class=article-body><pre tabindex=0><code class=language-blue data-lang=blue>              .---.
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside style=padding-top:100px><div class=sidenote>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/cv/index.txt</strong></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/cv>/cv</a></div><div class=article-body><pre tabindex=0><code class=language-blue data-lang=blue>              .---.
    ,---.    /.  ./|
   /     \ .-&#39; . &#39; |
  /    / &#39;/___/ \: |
@@ -25,4 +25,4 @@ algorithm analysis, calculus, formal proof, cybersecurity and software
 programming.</p><p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong> \
 <em>2015, Vilnius LT</em></p><p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong> \
 <em>2011-2013, Paris</em></p><p>Preparatory classes: two-year undergraduate intensive course in
-mathematics and physics.</p></div></section><footer id=footer><div class=footer-redirect>Read this page in your terminal with the command:<br><strong>$ curl -L edouard.paris/cv/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>
+mathematics and physics.</p></div></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
