deploy: 518cfb12e1f312f06be65a2d12d4486b911c43d1

--- a/notes/index.html
+++ b/notes/index.html
@@ -1,5 +1,7 @@
 <!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside style=padding-top:100px><div class=sidenote>Read this page in your terminal with the command:<br><strong>$ curl -L
 edouard.paris/notes/index.txt | less</strong></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/notes>/notes</a></div><div class=article-body><p>Small notes about how to do some stuff.</p><p>In case of typographical or grammar errors, tickets are welcomed on the
-<a href=https://github.com/edouardparis/edouard.paris>github repository</a>.</p></div><h1>2022 --</h1><ul><li><span><time>Jan 18</time>
+<a href=https://github.com/edouardparis/edouard.paris>github repository</a>.</p></div><h1>2023 --</h1><ul><li><span><time>Mar 26</time>
+</span>|
+<a href=https://edouard.paris/notes/i-asked-gpt4-to-create-dobble/>I Asked GPT-4 to help me create a Dobble card deck</a></li></ul><h1>2022 --</h1><ul><li><span><time>Jan 18</time>
 </span>|
 <a href=https://edouard.paris/notes/how-i-sign-lntop-binary/>How I sign a LNTOP binary</a></li></ul></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
