deploy: 38ff98c80be3676ed4f5b12a049172d4e43215b1

--- a/notes/i-asked-gpt4-to-create-dobble/index.html
+++ b/notes/i-asked-gpt4-to-create-dobble/index.html
@@ -113,7 +113,7 @@ for idx, card in enumerate(card_set):
 containing your image files. This script will generate and print a card set with
 the specified number of cards (10 in this case) and a minimal number of symbols
 per card. Keep in mind that the folder should contain at least as many image
-files as the number of cards required.</p><pre tabindex=0><code class=language-prompt data-lang=prompt>Can you modify the script in order to a new directory called cards 
+files as the number of cards required.</p><pre tabindex=0><code class=language-prompt data-lang=prompt>Can you modify the script in order to create a new directory called cards 
 and for each card in the card_set, create a new image file in 
 the cards directory using its symbols and imagemagick.
 </code></pre><p>Certainly! To create a new directory called &lsquo;cards&rsquo; and save each card as an
